fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1035,6 +1035,7 @@ body {
     top: 0px; 
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
     
 }
 
